# msaccess-vcs-mcp

./: .env.example  .gitignore  AGENTS.md  DECISIONS.md  LICENSE  README.md  pyproject.toml  test_addin_direct.py  test_addin_load.py  test_correct_syntax.py  test_filename_only.py  test_preload_first.py  test_read_version_property.py
docs/: AGENT_WORKFLOWS.md  EXPORT_FORMATS.md  TESTING.md  VBA_CALLBACK_API.md  VBA_INTEGRATION.md
src/msaccess_vcs_mcp/: __init__.py  addin_integration.py  callback_server.py  config.py  main.py  operation_manager.py  security.py  tools.py  usage_logging.py  validation.py
src/msaccess_vcs_mcp/access_com/: __init__.py  connection.py  dao_helpers.py
tests/: __init__.py  test_addin_integration.py  test_config.py  test_config_env_loading.py  test_exporters.py  test_integration.py  test_lazy_workspace_init.py  test_security.py  test_usage_logging.py
